<resources>
    <string name="app_name">WICARA</string>
    <string name="title_wicara">WICARA</string>
    <string name="text_splashscreen">Preserving Nusantara Languange</string>
    <string name="intro_desc1">WICARA menyediakan layanan penerjemah berbagai bahasa nusantara di Indonesia</string>
    <string name="intro_desc3">Klik, agar tetap terhubung dan nikmati manfaatnya!</string>
    <string name="intro_desc2">Saling menjaga kekerabatan dengan belajar bahasa nusantara bersama!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittle_user">User</string>
    <string name="tittle_setting">Setting</string>
    <string name="description_ex">Lorem ipsum dolor is amet, Lorem ipsum dolor is amet is a amet lorem ipsum dolor is amet lotrem</string>
    <string name="artikel_wisata">Artikel Wisata</string>
    <string name="wisata_pulau_bali">Wisata Pulau Bali</string>
    <string name="value">Dalam penambahan data bahasa !</string>
    <string name="pilih_foto_terbaikmu">Pilih foto terbaikmu!</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="nama">Nama</string>
    <string name="suzana_malik">Suzana Malik</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="_085155023244">085155023244</string>
    <string name="email">Email</string>
    <string name="suzana_gmail_com">suzana@gmail.com</string>
    <string name="simpan">simpan</string>
</resources>