<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    app:layout_constraintCircleRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header_ic2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView7"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_image_profil"
            android:src="@drawable/wicara"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/pilih_foto_terbaikmu"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/foto_profil"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            tools:layout_editor_absoluteX="51dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bigshotone"
            android:text="@string/tambah_foto"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/nama"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText2"
            android:layout_width="361dp"
            android:layout_height="40dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="29dp"
            android:fontFamily="@font/bigshotone"
            android:text="@string/suzana_malik"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30">


        </com.google.android.material.textfield.TextInputEditText>

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/nomor_hp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText3"
            android:layout_width="361dp"
            android:layout_height="40dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="29dp"
            android:fontFamily="@font/bigshotone"
            android:text="@string/_085155023244"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/email"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText3" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText4"
            android:layout_width="361dp"
            android:layout_height="40dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="29dp"
            android:fontFamily="@font/bigshotone"
            android:text="@string/suzana_gmail_com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <Button
            android:id="@+id/btn_change_profil"
            android:layout_width="310.24dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:background="@color/cardcolor"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/simpan"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
